src/objects/Location__c.object
<CustomObject>
    <fields>        
        <defaultValue>false</defaultValue>
        <fullName>Hidden_From_Calendar__changed__c</fullName>
        <label>Hidden From Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>North Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Campus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <description>Number of people this facility can hold.</description>
        <label>Maximum Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>        
        <scale>0</scale>
        <type>Number</type>
    <fields>
        <fullName>Parent_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Facility</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repairs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesson</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>